day3/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: giropops
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: strigus
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: girus
